=== 2016-12-28
* Enhancement
  * Updated Table [] method to return a row that has matching partial text in any column
  * Updated TableRow [] method to return column that matching partial text in any column
===Version v1.1.4/ 2016-12-27
* Enhancement
  * Added ability to find span's by title
  * Changed order of initialization so initialize_page is called after goto
  * Added flash method to Element to temporarily change the background color
  * Added when_not_present method to Element
  * Added default override of page level waits - Druid.default_page_wait
  * Added default override of element level waits - Druid.default_element_wait
  * Added the ability to find a TableRow by providing a String to the [] method
  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
  * Updated link to be able to identify by title
  * Updated div to be able to identify by title
  * Added ability to find text_field by :text and :label
  * Added select_value method to SelectList
* Fixes
  * Modified text area methods so it clears before setting new text
  * Updated [] method on Table to return nil when bad row header is provided
  * Updated [] method on TableRow to return nil when bad column header is provided
  * Fixed populate_page_with to work with text areas
=== 2016-12-26
* Enhancement
  * Changed page_url to accept a symbol that will cause it to call a corresponding method
  * Updated all accessor methods to take a default identifier of {:index => 0}
  * Added a page level element method to return a generic Element object
  * Updated all page level element locators to take a default identifier of {:index => 0}
  * Added a method to retrieve all file fields on a page
=== 2016-12-23
* Enhancement
  * Added #execute_script method to Druid
  * Added support for finding the following using :css
      Button
      Link
  * Added method to fetch generic element
  * Support alias method 'on' for 'on_page', 'visit' for 'visit_page' on PageFactory